Refactor backend codebase for improved architecture and security. Updated the senior-bug-fix-expert agent to support Chinese responses. Removed outdated Javacoder prompt. Enhanced ProManage code review report with detailed findings and prioritized action items. Streamlined permissions in settings and improved database connection testing. Updated dependencies for better performance and security compliance.